<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Room">

    <EditText
        android:id="@+id/EditTextSearch"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/frameedittext"
        android:hint="@string/searchtext"
        android:maxLines="1"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonSearch"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bottombutton"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toEndOf="@+id/EditTextSearch"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonDelete"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/buttondelete"
        android:text="@string/delete"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/topbutton"
        android:text="@string/add"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toEndOf="@+id/ButtonDelete"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/ListViewFilms"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/ButtonDelete"
        android:layout_marginTop="124dp"
        android:clickable="true"
        app:layout_constraintTop_toBottomOf="@+id/EditTextSearch"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>