<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".RegistrationNewUser">

    <ImageView
        android:id="@+id/ImageCinemaWorld"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TextCinemaWorld"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/worldcinema"
        android:textColor="@color/red"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ImageCinemaWorld" />

    <EditText
        android:id="@+id/EditTextName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Имя"
        android:paddingStart="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/frameedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextCinemaWorld" />

    <EditText
        android:id="@+id/EditTextLastname"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="Фамилия"
        android:paddingStart="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/frameedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextName" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/frameedittext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextLastname"/>

    <EditText
        android:id="@+id/EditTextPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:hint="@string/passwordregistartion"
        android:paddingStart="20dp"
        android:textColorHint="@color/white"
        android:background="@drawable/frameedittext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextEmail"/>

    <EditText
        android:id="@+id/EditTextVerificatioPassword"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:hint="Повторите пароль"
        android:textColorHint="@color/white"
        android:background="@drawable/frameedittext"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextPassword"/>

    <Button
        android:id="@+id/ButtonRegistartion"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/topbutton"
        android:text="@string/topbutton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        android:onClick="clickregistartion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextVerificatioPassword" />

    <Button
        android:id="@+id/ButtonHaveAccount"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bottombutton"
        android:text="@string/bottombutton"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ButtonRegistartion" />

</android.support.constraint.ConstraintLayout>